Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109854

[REG 6.2.4 -> 6.2.5] QQuickImageProvider doesn't scale properly if Image size is not set on High DPI displays

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.2.8, 6.4.3, 6.5.0, 6.6.0
    • 6.2.6, 6.3.2, 6.4.2, 6.5.0 Beta1
    • Quick: Other
    • None
    • All
    • 1609f8628 (dev), 713a68145 (6.4), babb4d0ba (6.5), 8017d8401 (tqtc/lts-6.2)

      See the attached example ( qml-highdpi.tgz ). It loads an image with size of 32x32. The image is shown twice in Image elements without specifying size. Image items are supposed to use the size of the loaded image. The first Image loads the file, the second uses image provider.

      It works as expected with QT_SCALE_FACTOR=1: both images have the same size:

      It is broken with QT_SCALE_FACTOR=2: QQuickImageProvider's image has the half of the size: 16x16 instead of 32x32:

      Specifying the Image item size explicitly works as expected.

        1. qml-highdpi.tgz
          2 kB
        2. qt-scale-factor-1.png
          qt-scale-factor-1.png
          3 kB
        3. qt-scale-factor-2.png
          qt-scale-factor-2.png
          8 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            pvarga Peter Varga
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: